<resources>
    <string name="app_name">ししゃもタイマー</string>
    <string name="main_menu_button_mealtimer">お食事タイマー</string>
    <string name="main_menu_button_apptimer">アプリタイマー</string>
    <string name="meal_timer_description">お食事タイマーです。</string>
    <string name="app_timer_description">アプリのタイマーです。</string>
    <string name="stamp_book_description">お食事タイマーのスタンプ帳です。</string>
    <string name="timeFormat">%1$d分</string>
    <string name="start_eating">▶</string>
    <string name="end_eating">■</string>
    <string name="salad">サラダ</string>
    <string name="soup">スープ</string>
    <string name="maindish">主菜</string>
    <string name="fukusai">副菜</string>
    <string name="rice">ごはん</string>
    <string name="warning_passedtime">未来の時間を指定してください。</string>
    <string name="message_start">スタート！</string>
    <string name="message_succeed">ごちそうさま、できた！</string>
    <string name="message_failed">ごちそうさま、できなかった・・・</string>
    <string name="button_label_back">もどる</string>
    <string name="mealTimerDescription">設定</string>
    <string name="min_for_debug">デバッグ用に30秒にする</string>
    <string name="stamp">スタンプもらう</string>
    <string name="ok">ok</string>
    <string name="message_mid">10こたまったね！\nもうすこし！</string>
    <string name="message_goal">20こたまったね！\nおめでとう！</string>
    <string name="message_readonly">いまは%1$dこだよ！</string>
    <string name="droid_from">ドロイドくんより</string>
    <string name="appTimerDescription">こどもに使わせる時間を入力してください。</string>
    <string name="start">スタート</string>
    <string name="setMinutes">設定時間(分)</string>
    <string name="statusStarted">タイマーを開始しました。%1$d分後にお知らせします。</string>
    <string name="statusStopped">タイマー停止中</string>
    <string name="stop">ストップ</string>
    <string name="messageStarted">タイマーを開始しました。%1$d分後にお知らせします。</string>
    <string name="messageFinished">またね！</string>
    <string name="stampTitle">すたんぷちょう</string>
</resources>
