<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.shishamo.shishamotimer.meal.StartMealActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="0.5"
        android:weightSum="1">

        <TextView
            android:id="@+id/txtClock"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="30dp"
            android:onClick="onClockTapped"
            android:textSize="28sp"
            android:layout_weight="0.05" />

        <Button
            android:id="@+id/btnStart"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_gravity="center_vertical"
            android:drawableLeft="@android:drawable/ic_media_play"
            android:drawablePadding="0dp"
            android:background="@drawable/button_stateful"
            android:textColor="@android:color/primary_text_dark"
            android:onClick="onStartButtonTapped" />

        <Button
            android:id="@+id/btnEnd"
            android:layout_width="78dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_gravity="center_vertical"
            android:visibility="gone"
            android:drawableLeft="@android:drawable/ic_media_pause"
            android:drawablePadding="0dp"
            android:background="@drawable/button_stateful"
            android:textColor="@android:color/primary_text_dark"
            android:onClick="onEndButtonTapped"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@drawable/wood">

        <ImageView
            android:id="@+id/rice"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="left|center_vertical"
            android:contentDescription="@string/rice"/>

        <ImageView
            android:id="@+id/main"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center|bottom"
            android:contentDescription="@string/maindish"/>

        <ImageView
            android:id="@+id/soup"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="right|bottom"
            android:contentDescription="@string/soup"/>

        <ImageView
            android:id="@+id/salad"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="right|top"
            android:contentDescription="@string/salad"/>

        <ImageView
            android:id="@+id/fukusai"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal|top"
            android:contentDescription="@string/fukusai"/>
    </FrameLayout>
</LinearLayout>

